dodavanje fajla MySql.Data.dll u folder prodaja_HHAN i promjena reference u projektu na ovaj fajl

--- a/prodaja_HHAN/prodaja_HHAN.csproj
+++ b/prodaja_HHAN/prodaja_HHAN.csproj
@@ -50,7 +50,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data">
-      <HintPath>..\..\Vjezba_26_tabelarni_prikaz_podataka\Vjezba_26_tabelarni_prikaz_podataka\bin\Debug\MySql.Data.dll</HintPath>
+      <HintPath>.\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
